# dotfiles

./: .Xmodmap  .apvlvrc  .bash_aliases  .bashenv  .bashrc  .gitignore  .gvimrc  .init.sh  .latexmkrc  .ocamlinit  .profile  .vimperatorrc  .vimrc  .xmobarrc  .zsh_alias  .zshenv  .zshrc  NeoBundleInstaller.sh  README.md  TODO  Xmodmap  ansible.cfg  bashrc  deinInstaller.sh  dotfilesInstaller.sh  ghc-mod-check.sh  hogeInstaller.sh  init.sh  init.vim  playbook.yml  profile  sh_aliases  shenv  win-clipboard.sh  zshrc
.i3/: config
.latex/: .latex  my_preamble.tex
.nvim/: .nvim
.nvim/bundle/.neobundle/: install_info  tags_info
.oh-my-zsh/themes/: agnoster.zsh-theme  norm.zsh-theme
.pandoc/: .pandoc
.pandoc/templates/: default.beamer  default.beamer.bak  default.html  default.latex  template1.beamer  xelatex.latex
.vim/: .netrwhist  .vim
.vim/bundle/.neobundle/: install_info  tags_info
.vimperator/: .vimperator
.vimperator/info/default/: history-command  history-search  local-marks
.xmobar/: xmobarrc-home  xmobarrc-lab  xmobarrc-single
.xmonad/: .gitignore  .xmonad  cabal.project.freeze  cabal.project.local  restart  screenInfo  stack.yaml  xmobar.hs  xmonad-config.cabal  xmonad.hs
example/: Vagrantfile  inventory-buster.yml  inventory-stretch.yml  inventory.yml
minivim/: .vimrc
nvim/: Sample.hs  coc-settings.json  ginit.vim  init.vim  my-nvim-hs.cabal  nvim.hs  stack.yaml
nvim/indent/: haskell.vim  indent
nvim/snippets/: _.snip  agda.snip  haskell.snip  ocaml.snip  pandoc.snip  rust.snip  snippets  tex.snip
roles/add_user/tasks/: main.yml
(+86 files in other folders)
