
name:                my-nvim-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
build-type:          Simple
cabal-version:       >=1.10

executable my-nvim-hs
  main-is:              nvim.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall -O3
  other-modules:        Sample
  build-depends:        base
                      , rio
                      , nvim-hs
                      , ghc-mod-nvim
                      , ghcid-nvim-simple
                      , nvim-hs-lsp
                      , stm
                      , unliftio >= 0.2
                      , void
                      , mtl >= 2.2.1 && < 2.3
  default-language:     Haskell2010

